# CindocuBot

./: .env_example  .gitignore  Dockerfile  README.md  core.py  docker-compose.yml  docker.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py  str.txt
bot_components/: bot_emoji.py  configurator.py  translate.py
core_elements/: code.py  logger.py  logs.py  user.py
core_elements/data_controller/: db_clear.py  models.py
ext/control/: evalCommand.py  restart.py
ext/economy/: economy.py  economy_control.py
ext/experience_system/: experience_accrual.py  voice_activity.py
ext/moderation/: moderation.py  moderationInfo.py
ext/other_content/: profile.py  test_field.py  top.py  voice_customize.py
ext/relationship_system/: relationship.py
ext/reputation/: reputation.py
ext/suggestions/: suggestions.py
ext/sync/: sync.py
ext/system/: config.py  role_recovery.py  status.py
ext/ups_listener/: up_listener.py
ext/utils/: Interaction_inspect.py  build.py  checks.py  converters.py  utils.py
locales/: general.ru.yml  messages.pot
locales/ext/: activity.ru.yml  economy.ru.yml  events.ru.yml  fun.ru.yml  games.ru.yml  gifts.ru.yml  history.ru.yml  inventory.ru.yml  moderation.ru.yml  personal_voice.ru.yml  pet_battle.ru.yml  pets.ru.yml  premoderation.ru.yml  profile.ru.yml  relationships.ru.yml  reputation.ru.yml  restriction.ru.yml  suggestions.ru.yml  top.ru.yml  (+1 more)
src/: bot.py  converters.py  custom_errors.py  formatters.py  lock.py  logger.py  settings.py  translation.py
utils/: checks.py  custom_context.py  custom_errors.py  utils.py
(+172 files in other folders)
